2020-12-23  Jim Fowler  <jrf@biblion>

	* Tools/python/aabooks/ajbbook/menus.py (create_edit_menu): Began
	adding a Sort By menu to ajbbooks. Added menu with empty actions
	for sort by AJB/AAA number, sort by author, and restore original
	order.  Don't know how I might restore the original order yet;
	particularly if an entry is added or deleted.

2020-12-22  Jim Fowler  <jrf@biblion>

	* Tools/python/scripts/verify (main): Added pagination
	sequence test.  Removed test for 'translation of'.

2020-12-06  Jim Fowler  <jrf@biblion>

	* Tools/python/aabooks/journal/entrydisplay.py
	(display_entry_designators): added try/except around search
	for colon. Prints warning message if colon is not found.

	* Tools/python/aabooks/ajbbook/ajbentry.py:
	(AJBentry.num_str): changed %1s to %2 for suffix. Was leaving a
	trailing space.

2020-11-29  Jim Fowler  <jrf@biblion>

	* Tools/python/scripts/findjournals: write this script to find
	journal names or abbreviation in AJB files that do not exist in
	the journals.xml file.

	* Tools/python/scripts/verify: wrote the python script verify to
	check entries that are not checked at entry time. Primarily the
	pagination, page number, and reviewers checked.  Good thing too,
	as at least ajb68, ajb67, and ajb66 have missing entries and I
	just did those files a few weeks ago.

	* Tools/python/aabooks/lib/pagination_xml.py: Added two new
	tests for bad string. Also removed 'T', 'Tafellen' for Plates.

2020-11-13  Jim Fowler  <jrf@biblion>

	* Installed ajbbooks with Keywords and TranslationOf boxes.

2020-11-09  Jim Fowler  <jrf@biblion>

	* Tools/python/aabooks/ajbbook/designer/ui_BookEntry.ui:
	Add Keyword and TranslatedFrom fields.

	* Tools/python/aabooks/ajbbook/ajbentry.py
	(AJBentry.is_valid_ajbnum): Change volume number limit from 69 to
	74 to support AAA volumes.

2020-11-08  Jim Fowler  <jrf@biblion>

	* Tools/python/scripts/aaaconvert.py (main): Worked on converting